# sts-rancher-agent-checks

./: .env  .gitignore  README.md  mypy.ini  pyproject.toml
software/rancher/: Vagrantfile
software/rancher/provision/: default_provision.sh  dev_provision.sh
src/: rancher.py
src/sts_rancher/: rancher.py
src/sts_rancher/sts_rancher_impl/client/: rancher_client.py
src/sts_rancher/sts_rancher_impl/model/: instance.py
src/sts_rancher/sts_rancher_impl/templates/: 020_rancher_hosts.yaml  030_rancher_services.yaml  040_rancher_stacks.yaml  050_rancher_containers.yaml  060_rancher_volumes.yaml  062_rancher_storage_pools.yaml
src/sts_rancher_impl/client/: __init__.py  rancher_client.py
src/sts_rancher_impl/templates/: 010_default.yaml  020_rancher_hosts.yaml  050_rancher_containers.yaml  062_rancher_storage_pools.yaml  070_rancher_networks.yaml
tasks/: agent.py
tasks/dev-agent/: Dockerfile
tests/: test_rancher_check.py
tests/resources/conf.d/rancher.d/: conf.yaml.example
tests/resources/docker/: agent_dockerfile
tests/resources/mockoon/: Rancher.json
tests/resources/responses/: default_containers.json  default_hosts.json  default_networks.json  default_service.json  default_stacks.json  default_storagepools.json  default_subnets.json  default_volumes.json  projects.json  sts_containers.json  sts_hosts.json  sts_networks.json  sts_service.json  sts_stacks.json  sts_storagepools.json  sts_subnets.json  sts_volumes.json
tests/resources/share/: install.sh
